[metadata]
name = StringConverter
version = 0.0.1
author = Tamir Zecler
author_email = tamir.zec@gmail.com
description = For generating PrettyStrings - currently support int only
long_description = file: README.md
classifiers =
    Programing Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operation System :: OS Independent

[options]
packages = find:
python_require = >=3.7
include_package_data = True

