[metadata]
name = StringConverter
version = 0.0.1
author = Tamir Zecler
author_email = tamir.zec@gmail.com
description = For generating PrettyStrings - currently support int only
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_require = >=3.7
